
# look in m4 directory for additional autoconf macros
ACLOCAL_AMFLAGS = -I m4

# these are the directories with contents to build
# when creating a new tool add the directory here and also list the Makefile in configure.ac
# then run autogen.sh




SUBDIRS = \
	base \
	base/testing \
	math \
	math/testing \
	file \
	file/testing \
	S2 \
	drawS2 \
	drawS2/testing \
	S3 \
	S3/testing \
	ds \
	ds/testing \
	table \
	table/testing \
	rad \
	tool \
	wl \
	wl/testing \
	chartS2 \
	chartS2/testing \
	fe \
	filetool \
	skytool \
	surftool \
	phasetool \
	slabtool \
	calctool \
	wltool \
	wltool/gui \
	planarrad/gui \
	testing






# include README in tarball and install on make install
#dist_doc_DATA = README

# make a sure a file is put in the distribution
# EXTRA_DIST = autogen.sh
#EXTRA_DIST = $(DX_CONFIG) doc/html

