
pkglibdir = ${prefix}/lib
pkgincludedir = ${prefix}/include/base

pkglib_LTLIBRARIES = libjudebase2_free.la



libjudebase2_free_la_SOURCES = \
	jbuffer.cc \
	jcolour.cc \
	jconsole.cc \
	jdatastream.cc \
	jdir.cc \
	jfile.cc \
	jimagesave.cc \
	jindextable.cc \
	jiodevicestore.cc \
	jlog.cc \
	jlist.cc \
	jparser.cc \
	jstring.cc \
	jtestcase.cc \
	jtextdevice.cc \
	jtextstream.cc \
	jtexttable.cc

libjudebase2_free_la_CPPFLAGS = -I${top_srcdir}

libjudebase2_free_la_LDFLAGS = -no-undefined






pkginclude_HEADERS = \
	jbuffer.h \
	jdatastream.h \
	jchar.h \
	jcircarray.h \
	jclock.h \
	jclock_linux.h \
	jclock_win32.h \
	jcolour.h \
	jconsole.h \
	jconstants.h \
	jdir.h \
	jerror.h \
	jenvvar.h \
	jfile.h \
	jgenericfactory.h \
	jimagesave.h \
	jindextable.h \
	jiodevice.h \
	jiodevicestore.h \
	jlist.h \
	jlog.h \
	jmagicnum.h \
	jmultipleoutdevice.h \
	jmutex.h \
	jmutex_linux.h \
	jmutex_win32.h \
	jparser.h \
	jstack.h \
	jstring.h \
	jsortable.h \
	jtestcase.h \
	jtextdevice.h \
	jtextstream.h \
	jtexttable.h \
	jthread.h \
	jthread_linux.h \
	jtypes.h \
	jutil.h \
	jversion.h

