
pkglibdir = ${prefix}/lib
pkgincludedir = ${prefix}/include/chartS2

pkglib_LTLIBRARIES = libjudechartS2_free.la



libjudechartS2_free_la_SOURCES = \
	chart2d.cc \
	chartaxis2d.cc \
	chartgrid2d.cc \
	chartkey2d.cc \
	chartlabel2d.cc \
	chartlinedata2d.cc

libjudechartS2_free_la_CPPFLAGS = -I${top_srcdir}






pkginclude_HEADERS = \
	chart2d.h \
	chartaxis2d.h \
	chartgrid2d.h \
	chartlinedata2d.h \
	chartlabel2d.h \
	chartnumberitemgen2d.h

