
pkglibdir = ${prefix}/lib
pkgincludedir = ${prefix}/include/drawS2

pkglib_LTLIBRARIES = libjudedrawS2_free.la



libjudedrawS2_free_la_SOURCES = \
	drawgroup2d.cc \
	drawing2d.cc \
	drawitem2d.cc \
	label2d.cc \
	line2d.cc \
	lineseq2d.cc \
	rectangle2d.cc \
	symbol2d.cc \
	trans2d.cc

libjudedrawS2_free_la_CPPFLAGS = -I${top_srcdir}






pkginclude_HEADERS = \
	drawgroup2d.h \
	drawing2d.h \
	drawitem2d.h \
	lineseq2d.h \
	label2d.h \
	rectangle2d.h \
	symbol2d.h \
	trans2d.h

