
pkglibdir = ${prefix}/lib
pkgincludedir = ${prefix}/include/ds

pkglib_LTLIBRARIES = libjudeds_free.la



libjudeds_free_la_SOURCES = \
	direcspec.cc \
	direcstruct.cc \
	dsquad.cc \
	hemispherepartvxh.cc \
	hsparttable.cc \
	sparttable.cc \
	spquad.cc \
	spquadintegrator.cc \
	spherepartition.cc \
	spherepartvxh.cc

libjudeds_free_la_CPPFLAGS = -I${top_srcdir}






pkginclude_HEADERS = \
	direcspec.h \
	direcstruct.h \
	dsquad.h \
	dsquadipol.h \
	hemispherepartvxh.h \
	hsparttable.h \
	parttable.h \
	quaddatasource.h \
	quadintegrator.h \
	sparttable.h \
	spquad.h \
	spquadintegrator.h \
	spherepartition.h \
	spherepartvxh.h




