
pkglibdir = ${prefix}/lib
pkgincludedir = ${prefix}/include/file

pkglib_LTLIBRARIES = libjudefile_free.la



libjudefile_free_la_SOURCES = \
	filedesc.cc \
	filesetdesc.cc

libjudefile_free_la_CPPFLAGS = -I${top_srcdir}






pkginclude_HEADERS = \
	filedesc.h \
	fileinfo.h \
	filesetdesc.h \
	fileutils.h




