
pkglibdir = ${prefix}/lib
pkgincludedir = ${prefix}/include/math

pkglib_LTLIBRARIES = libjudemath2_free.la



libjudemath2_free_la_SOURCES = \
	datautil.cc \
	rand.cc \
	ranlecuyer.cc

libjudemath2_free_la_CPPFLAGS = -I${top_srcdir}









pkginclude_HEADERS = \
	datautil.h \
	functiontab2.h \
	mathutil.h \
	rand.h \
	rangen.h \
	ranlecuyer.h \
	ublas.h \
	valuerange.h










