
pkglibdir = ${prefix}/lib
pkgincludedir = ${prefix}/include/rad

pkglib_LTLIBRARIES = libjuderad_free.la



libjuderad_free_la_SOURCES = \
	bandspec.cc \
	hemispheredraw.cc \
	phasefunc.cc \
	raddirec.cc \
	raddirecdirec.cc \
	radutils.cc \
	rd_matrixdft.cc \
	rdd_matrixdft.cc \
	rgbimage.cc \
	report.cc

libjuderad_free_la_CPPFLAGS = -I${top_srcdir}






pkginclude_HEADERS = \
	bandspec.h \
	hemispheredraw.h \
	phasefunc.h \
	planeboundaryemis.h \
	planeboundaryreflec.h \
	planeinterface.h \
	policys.h \
	radtypes.h \
	raddirec.h \
	raddirecdft.h \
	raddirecimp.h \
	raddirectable.h \
	raddirecdirec.h \
	raddirecdirecdft.h \
	raddirecdirecdftsym.h \
	raddirecdirecimp.h \
	raddirecdirectable.h \
	rbanddata.h \
	radunits.h \
	radutils.h \
	rd_matrixdft.h \
	rdd_matrixdft.h \
	rendertarget.h \
	rgbimage.h \
	sbanddata.h \
	slabintegrator.h \
	slabsoln.h \
	spectralimage.h




