
pkglibdir = ${prefix}/lib
pkgincludedir = ${prefix}/include/table

pkglib_LTLIBRARIES = libjudetable_free.la



libjudetable_free_la_SOURCES =

libjudetable_free_la_CPPFLAGS = -I${top_srcdir}






pkginclude_HEADERS = \
	direcdirectable.h \
	direcdirectablebase.h \
	directablebase.h \
	directable.h

