
pkglibdir = ${prefix}/lib
pkgincludedir = ${prefix}/include/wl

pkglib_LTLIBRARIES = libjudewl_free.la



libjudewl_free_la_SOURCES = \
        archivefile.cc \
	archivepacket.cc \
	blockstream.cc \
	channel.cc \
	mergelist.cc \
	record.cc \
	record_acs.cc \
	record_ctd.cc \
	record_hocr.cc \
	record_ecobb3.cc \
	record_merge.cc \
	record_text.cc \
	record_rawdata.cc \
	sensor.cc \
	sensorconfig.cc \
	sensor_acs.cc \
	sensor_ctd.cc \
	sensor_ecobb3.cc \
	sensor_hocr.cc \
	sensor_text.cc \
	textutils.cc

libjudewl_free_la_CPPFLAGS = -I${top_srcdir}






pkginclude_HEADERS = \
	archivefile.h \
	archivepacket.h \
	byteio.h \
	bytestream.h \
	channel.h \
	mergelist.h \
	record_merge.h \
	record_rawdata.h \
	sensorconfig.h \
	textutils.h

