

noinst_PROGRAMS = test_chartS2_free




test_chartS2_free_SOURCES = \
	chart2d_testing.cc \
	main.cc

test_chartS2_free_CPPFLAGS = \
	-I$(top_srcdir)

test_chartS2_free_LDADD = \
	$(top_builddir)/chartS2/libjudechartS2_free.la \
	$(top_builddir)/drawS2/libjudedrawS2_free.la \
	$(top_builddir)/S2/libjudeS2_free.la \
	$(top_builddir)/math/libjudemath2_free.la \
	$(top_builddir)/base/libjudebase2_free.la




