

noinst_PROGRAMS = test_drawS2_free




test_drawS2_free_SOURCES = \
	drawing2d_testing.cc \
	main.cc

test_drawS2_free_CPPFLAGS = \
	-I$(top_srcdir)

test_drawS2_free_LDADD = \
	$(top_builddir)/drawS2/libjudedrawS2_free.la \
	$(top_builddir)/S2/libjudeS2_free.la \
	$(top_builddir)/math/libjudemath2_free.la \
	$(top_builddir)/base/libjudebase2_free.la




